# tapes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  config.example.yaml  docker-compose.yaml  idea.txt  pyproject.toml  tapes.toml.example
.githooks/: pre-commit
.github/workflows/: ci.yml  docker-publish.yml
docs/: decisions.md  issues.md  pipeline-model.md  testing.md  vocabulary.md
docs/decisions/: 001-db-lookup-instead-of-xattr.md  004-opensubtitles-deferred.md  006-mit-license.md  007-uv-for-package-management.md  008-pre-flight-collision-detection.md  009-multi-episode-manual-only.md  011-github-primary-codeberg-mirror.md
docs/issues/: 001-normalize-guessit-field-names.md  002-fix-match-source-in-db-records.md  004-discovery-and-companion-scoping.md
docs/legacy/: 2026-03-04-tapes-design.md  2026-03-04-tapes-review-findings.md  2026-03-05-e2e-tests-implementation.md  2026-03-05-interactive-ui-redesign.md  2026-03-05-task18-rich-ui.md  2026-03-05-v2-implementation.md  2026-03-06-grid-tui.md  2026-03-06-m5-uncertain-matches.md  2026-03-06-m6-destination-view-implementation.md  2026-03-06-m6-destination-view.md  2026-03-06-m7-edit-modal.md  README.md
docs/mockups/: 001-ui-design.md  002-mockup.html  color-swatches.html  tui-mockup.html  tui-visual-design.html
docs/plans/: 2026-03-04-tapes-implementation.md  2026-03-04-tapes-robustness-review.md  2026-03-05-e2e-tests.md  2026-03-05-interactive-matching.md  2026-03-05-wire-query-stats-info-fields.md  2026-03-06-grid-tui.md  2026-03-06-m7-edit-modal-implementation.md  2026-03-06-tui-redesign-milestones.md  2026-03-06-tui-redesign.md  2026-03-07-tui-visual-design.md  2026-03-07-tui-walkthrough-draft.md  2026-03-08-config-overhaul.md  2026-03-08-dependency-upgrade-design.md  2026-03-08-layout-overhaul.md  2026-03-08-multi-file-refresh-fix.md  2026-03-08-similarity-vs-confidence.md  2026-03-08-visual-fixes-remaining.md  2026-03-08-web-ui-design.md  2026-03-09-conflicts-and-language-design.md  2026-03-09-keybinding-redesign.md  2026-03-09-pipeline-restructure.md  2026-03-10-pipeline-and-ux-fixes-plan.md  2026-03-10-pipeline-and-ux-fixes.md  2026-03-19-horizontal-scroll-design.md
docs/reviews/: 2026-03-08-code-review.md
tapes/: __main__.py  categorize.py  cli.py  companions.py  config.py  conflicts.py  extract.py  fields.py  file_ops.py  grouper.py  metadata.py  models.py  pipeline.py  scanner.py  similarity.py  templates.py  tmdb.py  tree_model.py  validation.py
tapes/cli/: main.py
tapes/companions/: classifier.py
tapes/config/: loader.py  schema.py
tapes/db/: repository.py  schema.py
tapes/discovery/: grouper.py  scanner.py
tapes/events/: bus.py
tapes/identification/: filename.py  mediainfo.py  nfo_scanner.py  osdb_hash.py  pipeline.py
tapes/importer/: collision.py  file_ops.py  interactive.py  service.py  session.py
tapes/metadata/: base.py  tmdb.py
tapes/plugins/: loader.py
tapes/templates/: engine.py
tapes/ui/: __init__.py  app.py  bottom_bar.py  colors.py  commit_modal.py  commit_view.py  dest.py  detail_render.py  detail_view.py  edit_modal.py  file_editor.py  grid.py  help_overlay.py  help_view.py  merge_modal.py  metadata_render.py  metadata_view.py  models.py  pipeline.py  query.py  render.py  split_modal.py  (+4 more)
tests/: test_can_stage.py  test_cli.py  test_companions.py  test_compute_dest_missing_fields.py  test_config.py  test_config_conflicts.py  test_conflicts.py  test_db.py  test_e2e.py  test_events.py  test_extract.py  test_file_ops.py  test_grouper.py  test_metadata.py  test_models.py  test_pipeline.py  test_pipeline_auto_accept_gate.py  test_pipeline_clear_candidates.py  test_pipeline_language.py  test_scanner.py  test_similarity.py  test_smoke.py  test_templates.py  test_tmdb.py  test_tmdb_language.py  test_validation.py
unraid/: tapes.xml
(+98 files in other folders)
