[project]
name = "tapes"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15,<1",
    "rich>=14,<15",
    "guessit>=3.8,<4",
    "pydantic>=2.6,<3",
    "pyyaml>=6,<7",
    "textual>=8,<9",
    "httpx>=0.27,<1",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=6,<7",
    "pytest-asyncio>=1,<2",
    "textual-dev>=1,<2",
    "respx>=0.22,<1",
]

[project.scripts]
tapes = "tapes.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
